Added class library and configure using extension methods

--- a/ConsoleApp/appsettings.json
+++ b/ConsoleApp/appsettings.json
@@ -8,6 +8,10 @@
 	},
 	"CustomSettings": {
 		"Url": "www.contoso.com",
-		"UseHttps":  true
+		"UseHttps": true
+	},
+	"Library": {
+		"Sender": "B-Team Software",
+		"Message":  "Thank you for your service!"
 	}
 }
